--- a/portfolio/css/styles.css
+++ b/portfolio/css/styles.css
@@ -10,6 +10,7 @@
 
 
 }
+
 body{
     background-color: var(--black-full);
     color: #fff;
@@ -183,7 +184,6 @@ main .presentation div:last-child {
     align-items: center;
     background: #f0efef;
     border-radius: 50%;
-    box-shadow: 0.5rem 0.5rem 1rem 0.5rem rgba(0,0,0,0.5);
     width: 41rem;
     height: 41rem;
     margin: 5rem auto;
@@ -232,7 +232,6 @@ main .about .sub-description {
     
     
 }
-
 
 .about .boxes .box {
     width: 25.6rem;
@@ -333,7 +332,7 @@ input[type='text']{
 
 
 textarea:hover,
- input[type='text']:hover{
+input[type='text']:hover{
     border: 2px solid blue;
 }
 
@@ -350,7 +349,7 @@ textarea:hover,
     display:flex;
     width: 100%;
     height: 8rem;
-    background-color: #181C23;
+    background-color: var(--black-secondary);
     align-items: center;
     justify-content: flex-start;
 }
@@ -376,8 +375,6 @@ textarea:hover,
 }
 
 .footer{
-    /* display: block; */
-    /* margin-top: 2rem; */
     margin-bottom: 2rem;
     font-size: 1.6rem;
     
