--- a/portfolio/css/styles.css
+++ b/portfolio/css/styles.css
@@ -127,11 +127,11 @@ p {
 }
 .presentation .foto-perfil {
   border-radius: 50%;
-  border: 0.1rem solid #fff;
-  box-shadow: 0.5rem 0.5rem 1rem 0.5rem #fff;
   box-sizing: border-box;
-  width: 45rem;
-  height: 45rem;
+  width: 60rem;
+  height: 60rem;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .presentation-left p {
   margin-bottom: 6rem;
