--- a/portfolio/css/styles.scss
+++ b/portfolio/css/styles.scss
@@ -155,11 +155,10 @@ p{
 
     & .foto-perfil{
         border-radius: 50%; 
-        border: 0.1rem solid #fff;
-        box-shadow: 0.5rem  0.5rem 1rem 0.5rem #fff;
         box-sizing: border-box;
-        width: 45rem;
-        height: 45rem;
+        width: 60rem;
+        height: 60rem;
+        object-fit: cover;
      }
 
      &-left p{
